--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,44 +8,11 @@
     android:paddingTop="@dimen/button_picksong_margin"
     tools:context=".MainActivity" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:gravity="center" >
-
-        <Button
-            android:id="@+id/buttonRewind"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:text="@string/button_rewind" />
-
-        <Button
-            android:id="@+id/buttonStop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_Stop" />
-
-        <Button
-            android:id="@+id/buttonPlayPause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_play" />
-
-        <Button
-            android:id="@+id/buttonFastForward"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:text="@string/button_fastforward" />
-    </LinearLayout>
-
     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout1" />
+        android:layout_below="@+id/fragmentAudioPlayer" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -98,5 +65,15 @@
 
         </RelativeLayout>
     </LinearLayout>
+
+    <fragment
+        android:id="@+id/fragmentAudioPlayer"
+        android:name="com.matthew.ahsam.phoenix.randommusicplayer.AudioPlayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        tools:layout="@layout/music_player" />
 
 </RelativeLayout>
