--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -28,33 +28,21 @@
             android:layout_height="match_parent"
             android:layout_weight=".5" >
 
-            <EditText
-                android:id="@+id/editTextSongName"
+            <Button
+                android:id="@+id/buttonAddSection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/buttonSelectSong"
-                android:hint="@string/edittext_hint" />
-
-            <Button
-                android:id="@+id/buttonSelectSong"
-                android:layout_width="35dp"
-                android:layout_height="40dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:paddingBottom="@dimen/button_picksong_margin"
-                android:paddingLeft="@dimen/button_picksong_margin"
-                android:paddingRight="@dimen/button_picksong_margin"
-                android:paddingTop="@dimen/button_picksong_margin"
-                android:text="@string/button_select_song" />
+                android:text="@string/button_add_section" />
 
             <ListView
                 android:id="@+id/listViewAddSongs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@+id/buttonSelectSong" >
+                android:layout_below="@+id/buttonAddSection" >
+
             </ListView>
 
         </RelativeLayout>
