Add Drag and Drop Songs into Song List
Added ability to Drag and Drop Songs into Song List from Input List

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     android:paddingBottom="@dimen/button_picksong_margin"
     android:paddingLeft="@dimen/button_picksong_margin"
     android:paddingRight="@dimen/button_picksong_margin"
