--- a/res/layout/music_player.xml
+++ b/res/layout/music_player.xml
@@ -13,7 +13,7 @@
         android:gravity="center" >
 
         <Button
-            android:id="@+id/buttonRewind"
+            android:id="@+id/buttonPreviousSong"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="@string/button_rewind" />
@@ -31,7 +31,7 @@
             android:text="@string/button_play" />
 
         <Button
-            android:id="@+id/buttonFastForward"
+            android:id="@+id/buttonNextSong"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="@string/button_fastforward" />
