--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
-    <dimen name="button_picksong_margin">1dp</dimen>
+    <dimen name="button_song_name_margin">4dp</dimen>
 
 </resources>
